------------------------------------------------------
Version 1.12.2 - 3.0.8
------------------------------------------------------
Additions
- None

Changes
- None

Bug Fixes
- None
------------------------------------------------------
Version 1.12.2 - 3.0.7
------------------------------------------------------
Additions
- Enabled the keybind to open backpacks directly. Specifically it checks (in the following order):
    - The selected item
    - The offhand
    - The hotbar (left to right)
    - The main inventory (left to right, up to down)

Changes
- None

Bug Fixes
- None

------------------------------------------------------
Version 1.12 - 3.0.6
------------------------------------------------------

Additions
- None

Changes
- None

Bug Fixes
- Fixed FPS performance drop (due to colored backpack code)

------------------------------------------------------
Version 1.12 - 3.0.5
------------------------------------------------------

Additions
- None

Changes
- [Internal] Re-added build number to build script

Bug Fixes
- Fixed backpack being stuck when moved via number-keys into open backpack

------------------------------------------------------
Version 1.12 - 3.0.4
------------------------------------------------------

Additions
- None

Changes
- None

Bug Fixes
- Fixed crash when changing keybindings.

------------------------------------------------------
Version 1.12 - 3.0.3
------------------------------------------------------

Additions
- Added the ability to color backpacks
    - Shapelessly craft with dye, craft with water bucket to remove color
- Added the "Everlasting Upgrade"
    - It makes backpacks never despawn
- Added ability to remove upgrades
    - Backpack + shears in an anvil
- [Internal] Added the code base for the ability to equip backpacks
    - Disabled though, as it hasn't been tested enough and rendering isn't working yet
- {Internal] Added a new Blacklist to the API

Changes