@@ -8,7 +8,8 @@ Changes
 - None
 
 Bug Fixes
-- None
+- Fix backpack going into itself via hotkey
+- Fix config changes not updating
 ------------------------------------------------------
 Version 1.12.2 - 3.0.7
 ------------------------------------------------------
